--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,12 @@ body {
 }
 
 
-/*Facebook Review*/
+/* General styling */
 .carousel-wrap {
   margin: 0 auto;
-    padding: 0;
-    position: relative;
-    /* Center the carousel */
-
+  padding: 0;
+  position: relative;
 }
-
 .containeres {
   width: 100%;
   display: flex;
@@ -28,54 +25,52 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 30vh;
 }
 
 /* Remove margin between items */
 .item {
   margin: 0;
-}
-
-/* Make sure the iframe takes up the full width of its container */
-iframe {
-  width: 100%;
-  height: 30vh;
-}
-/*End facebook Rev*/
-
-
-@media (max-width: 575px) {
-  .client_section {
-    padding: 10px 0; /* Adjust padding for smaller screens */
-  }
-
-
-.owl-carousel {
-  display: flex;
+  max-width: 100%;
+  display: flex !important;
   justify-content: center;
   align-items: center;
-  gap: 0; /* Remove gap between items */
+  
 }
+
+/* Mobile responsiveness */
+@media (max-width: 575.98px) {
+  .carousel-wrap {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .owl-carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0; /* Remove gap between items */
+    padding: 0; /* Remove any padding */
+  }
 
   .item {
     width: 100%; /* Full width for items */
-    margin: 0 auto; /* Remove margin for items */
+    margin: 0 auto; /* Center items */
     padding: 0; /* Remove padding for items */
   }
 
-  iframe {
-    width: 100%; /* Full width for iframes */
-    height: 30vh; /* Fixed height for iframes on smaller screens */
-    max-width: 100%; /* Ensure iframe doesn't exceed container width */
-    margin: 0 40px auto; /* Remove margin */
-    padding: 0; /* Remove padding */
-    transform: scale(0.7); /* Scale down the iframe content */
-    transform-origin: 0 0; /* Set the origin of scaling */
+ 
+  .owl-item {
+    width: 100%; /* Full width for items */
+    display: flex; /* Flexbox display */
+    justify-content: center; /* Center content horizontally */
+    margin: 0; /* Remove any margin */
   }
-  .owl-carousel {
-    flex-wrap: nowrap; /* Ensure items do not wrap */
-  }
-  
 }
+
 
 @media screen and (min-width: 1000px) {
   .owl-carousel {
